apps/overlays/prod/11-applications/tech-blog/http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/main/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-http-route
  namespace: garage
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking-external
  hostnames:
    - blog.andremota.xyz
  rules:
    - request:
        headers:
          - name: Host
            action: Set
            value: tech-blog-bucket
      backendRefs:
        - name: garage-garage
          port: 3902
